=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 2.X - IN DEVELOPMENT

=over 

=item *

Added C<use_data>, C<use_data_size> and C<cache_key> options to
L<Krang::HTMLPager>'s C<new()>. Also added C<calculate_limit()>,
C<calculate_order_by()>, C<calculate_order_desc()> 
and C<calculate_current_page_num()> to expose the inner calculations
when needed. [Michael Peters]

=item *

Fixed element editor to not display a delete button when no elements
allow deletion.  Also suppressed the Order checkbox when nothing is
reorderable. [Sam]

=item * 

Send no-cache HTTP headers for all L<Krang::CGI> requests. This
will fix some problems when logging in as a different user with
the same browser session in IE. [Michael Peters]

=item *

Upgraded to HTML::Template v2.9 fixing several bugs. [Sam]

=item *

Added a new configuration variable, PreviewSSL, which controls whether
links to preview use SSL.  This behavior was previously the default
when EnableSSL was set, but now it is available independently and can
be turned off even when Krang itself is using SSL.  [Sam]

=item * 

During DB creation, addon F<sql/> files should come after core
Krang. This allows addons to change existing Krang data/tables. 
[Michael Peters]

=item *

Fixed bug where deleting a category which was used in an advanced
searched caused an ISE when returning to the advanced search.  [Sam]

=item *

Fixed bug where use of URL search on Find Template would result in
incorrect substituition of % for non-alphanumeric characters. [Sam]

=item *

Fixed bug where hitting enter on the new or edit template screens
would produce an ISE.  [Sam]

=item *

Fixed bug in media find - searches which included _ or % wouldn't find
anything. [Sam]

=item *

Fixed media bulk upload to ignore MacOSX fluff in upload archives
(__MACOSX directory, .DS_Store, .localized). [Sam]

=item *

Fixed bug in New Template where it was imposible to clear the category